# shieldlayer-max

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dashboard.txt  requirements.txt
.claude/: launch.json
.github/workflows/: pages.yml
app/: config.py  main.py  setup_wizard.py
app/api/: routes.py  schemas.py
app/database/: audit_log.py  vector_cache.py
app/engine/: __init__.py  guardian.py  router.py  shield.py  vault.py
app/middleware/: auth.py  config_guard.py
browser-extension/: overlay.html
chrome-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: README.md
dashboard/: main.py  setup.py
dashboard-next/: package-lock.json  package.json  vitest.config.ts
dashboard-next/app/: globals.css  layout.tsx  page.tsx
dashboard-next/lib/: api.ts  ws.ts
dashboard-next/tests/: AuditExport.test.tsx  ComplianceScore.test.tsx  LiveFeed.test.tsx  RisksAverted.test.tsx
dashboard-next/types/: gateway.ts
data/: synonym_pairs.json
extension/: background.js  content.js  ghost_mode.css  manifest.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
extension/public/: popup.html
gateway/: config.py  main.py  models.py  proxy.py  router.py
gateway/anonymizer/: crypto.py  engine.py  vault.py
tests/: conftest.py  test_audit_log.py  test_auth.py  test_config_guard.py  test_guardian.py  test_router.py  test_routes.py  test_shield.py  test_vault.py  test_vector_cache.py
(+35 files in other folders)
